[package]
name = "bolt-node"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"
bytes = "0.5"
snafu = "0.6"
walkdir = "2.3"
url = "2.1"
clap = "3.0.0-beta.2"

bolt = { path = "../bolt" }
