[package]
name = "bolt"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"
tokio-util = { version = "0.4", features = ["codec"] }
