[package]
name = "bolt"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
derive_more = "0.99"

bytes = "0.5"
snafu = "0.6"
log = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.7"
evmap = "10.0"
ttl_cache = "0.5"

tokio = { version = "0.2.22", features = ["io-util"] }
tokio-util = { version = "0.4", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "0.14"

